; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/userenv/extr_environment.c_GetCurrentUserKey.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/userenv/extr_environment.c_GetCurrentUserKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"GetUserSidFromToken() failed\0A\00", align 1
@HKEY_USERS = common dso_local global i32 0, align 4
@MAXIMUM_ALLOWED = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [36 x i8] c"RegOpenKeyExW() failed (Error %ld)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @GetCurrentUserKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @GetCurrentUserKey(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__, align 4
  %6 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @GetUserSidStringFromToken(i32 %7, %struct.TYPE_4__* %5)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = call i32 (i8*, ...) @DPRINT1(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %31

12:                                               ; preds = %1
  %13 = load i32, i32* @HKEY_USERS, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @MAXIMUM_ALLOWED, align 4
  %17 = call i64 @RegOpenKeyExW(i32 %13, i32 %15, i32 0, i32 %16, i32** %6)
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* @ERROR_SUCCESS, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %28

21:                                               ; preds = %12
  %22 = load i64, i64* %4, align 8
  %23 = call i32 (i8*, ...) @DPRINT1(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i64 %22)
  %24 = call i32 @RtlFreeUnicodeString(%struct.TYPE_4__* %5)
  %25 = load i64, i64* %4, align 8
  %26 = trunc i64 %25 to i32
  %27 = call i32 @SetLastError(i32 %26)
  store i32* null, i32** %2, align 8
  br label %31

28:                                               ; preds = %12
  %29 = call i32 @RtlFreeUnicodeString(%struct.TYPE_4__* %5)
  %30 = load i32*, i32** %6, align 8
  store i32* %30, i32** %2, align 8
  br label %31

31:                                               ; preds = %28, %21, %10
  %32 = load i32*, i32** %2, align 8
  ret i32* %32
}

declare dso_local i32 @GetUserSidStringFromToken(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @DPRINT1(i8*, ...) #1

declare dso_local i64 @RegOpenKeyExW(i32, i32, i32, i32, i32**) #1

declare dso_local i32 @RtlFreeUnicodeString(%struct.TYPE_4__*) #1

declare dso_local i32 @SetLastError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
